[package]
name = "nzb-nntp"
version = "0.1.0"
edition = "2024"
description = "Async NNTP client with TLS, pipelining, connection pooling, and multi-server support"
license = "MIT"
repository = "https://github.com/AusAgentSmith/nzb-nntp"

[dependencies]
tokio = { version = "1", features = ["net", "io-util", "rt", "sync", "time", "macros"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
bytes = "1"
tracing = "0.1"
anyhow = "1"
thiserror = "2"
governor = "0.10"
arc-swap = "1"
webpki-roots = "1"
rustls-pki-types = "1"
parking_lot = "0.12"
flate2 = "1"
serde = { version = "1", features = ["derive"] }
tokio-socks = "0.5"

[dev-dependencies]
serde_json = "1"
toml = "0.8"

[lints.clippy]
all = { level = "warn", priority = -1 }

[lints.rust]
unused = "warn"
